--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Home/Index.fi.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Home/Index.fi.resx
@@ -117,22 +117,19 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Manage Road User Account" xml:space="preserve">
-    <value>Gérer le compte d’utilisateur routier</value>
+  <data name="Home" xml:space="preserve">
+    <value>Koti</value>
   </data>
-  <data name="Logout" xml:space="preserve">
-    <value>Déconnexion</value>
+  <data name="Welcome to the Nordic Tolling Service" xml:space="preserve">
+    <value>Tervetuloa Pohjoismaiseen tietullipalveluun</value>
   </data>
-  <data name="Manage Toll Operator Account" xml:space="preserve">
-    <value>Gérer le compte de l’opérateur de péage</value>
+  <data name="Register or login to make use of this system..." xml:space="preserve">
+    <value>Rekisteröidy tai kirjaudu sisään käyttääksesi tätä järjestelmää ...</value>
   </data>
-  <data name="Manage Admin Account" xml:space="preserve">
-    <value>Gérer le compte administrateur</value>
-  </data>
-  <data name="Register Road User" xml:space="preserve">
-    <value>Enregistrer les usagers de la route</value>
+  <data name="Register" xml:space="preserve">
+    <value>Rekisteröidy</value>
   </data>
   <data name="Login" xml:space="preserve">
-    <value>Connectez-vous</value>
+    <value>Sisäänkirjautuminen</value>
   </data>
 </root>
