--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/_Layout.ar.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/_Layout.ar.resx
@@ -117,4 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Nordic Department of Transport" xml:space="preserve">
+    <value>وزارة النقل الاسكندنافية</value>
+  </data>
+  <data name="English" xml:space="preserve">
+    <value>الإنكليزية</value>
+  </data>
+  <data name="French" xml:space="preserve">
+    <value>الفرنسية</value>
+  </data>
+  <data name="Arabic" xml:space="preserve">
+    <value>العربية</value>
+  </data>
+  <data name="Norwegian" xml:space="preserve">
+    <value>النرويجية ‏</value>
+  </data>
+  <data name="Swedish" xml:space="preserve">
+    <value>السويدية</value>
+  </data>
+  <data name="Danish" xml:space="preserve">
+    <value>الدانماركية</value>
+  </data>
+  <data name="Finnish" xml:space="preserve">
+    <value>الفنلندية</value>
+  </data>
+  <data name="Decrease font size by 1%" xml:space="preserve">
+    <value>تقليل حجم الخط بنسبة 1٪</value>
+  </data>
+  <data name="Increase font size by 1%" xml:space="preserve">
+    <value>تكبير حجم الخط بنسبة 1٪</value>
+  </data>
+  <data name="Home" xml:space="preserve">
+    <value>وطن</value>
+  </data>
+  <data name="Toll History" xml:space="preserve">
+    <value>تاريخ الحصيلة</value>
+  </data>
+  <data name="Contracts" xml:space="preserve">
+    <value>عقود</value>
+  </data>
+  <data name="Privacy" xml:space="preserve">
+    <value>الخصوصيه</value>
+  </data>
+  <data name="Nordic Tolling Service&quot;] - &lt;a asp-area=&quot;&quot; asp-controller=&quot;Home&quot; asp-action=&quot;Privacy&quot;&gt;@Localizer[&quot;Privacy" xml:space="preserve">
+    <value>Nordic Tolling Service"] - &lt;a asp-area="" asp-controller="Home" asp-action="Privacy"&gt;@Localizer["Privacy"Privacy</value>
+  </data>
 </root>
