--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/_Layout.sv.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/_Layout.sv.resx
@@ -117,22 +117,49 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Manage Road User Account" xml:space="preserve">
-    <value>Gérer le compte d’utilisateur routier</value>
+  <data name="Nordic Department of Transport" xml:space="preserve">
+    <value>Nordiska transportdepartementet</value>
   </data>
-  <data name="Logout" xml:space="preserve">
-    <value>Déconnexion</value>
+  <data name="English" xml:space="preserve">
+    <value>Engelska</value>
   </data>
-  <data name="Manage Toll Operator Account" xml:space="preserve">
-    <value>Gérer le compte de l’opérateur de péage</value>
+  <data name="French" xml:space="preserve">
+    <value>Franska</value>
   </data>
-  <data name="Manage Admin Account" xml:space="preserve">
-    <value>Gérer le compte administrateur</value>
+  <data name="Arabic" xml:space="preserve">
+    <value>Arabiska</value>
   </data>
-  <data name="Register Road User" xml:space="preserve">
-    <value>Enregistrer les usagers de la route</value>
+  <data name="Norwegian" xml:space="preserve">
+    <value>Norska</value>
   </data>
-  <data name="Login" xml:space="preserve">
-    <value>Connectez-vous</value>
+  <data name="Swedish" xml:space="preserve">
+    <value>Svenska</value>
+  </data>
+  <data name="Danish" xml:space="preserve">
+    <value>Danska</value>
+  </data>
+  <data name="Finnish" xml:space="preserve">
+    <value>Finska</value>
+  </data>
+  <data name="Decrease font size by 1%" xml:space="preserve">
+    <value>Minska teckenstorleken med 1 %</value>
+  </data>
+  <data name="Increase font size by 1%" xml:space="preserve">
+    <value>Öka teckenstorleken med 1 %</value>
+  </data>
+  <data name="Home" xml:space="preserve">
+    <value>Hem</value>
+  </data>
+  <data name="Toll History" xml:space="preserve">
+    <value>Avgiftshistorik</value>
+  </data>
+  <data name="Contracts" xml:space="preserve">
+    <value>Kontrakt</value>
+  </data>
+  <data name="Privacy" xml:space="preserve">
+    <value>Privatliv</value>
+  </data>
+  <data name="Nordic Tolling Service&quot;] - &lt;a asp-area=&quot;&quot; asp-controller=&quot;Home&quot; asp-action=&quot;Privacy&quot;&gt;@Localizer[&quot;Privacy" xml:space="preserve">
+    <value>Nordic Tolling Service"] - &lt;en asp-area="" asp-controller="Home" asp-action="Privacy"&gt;@Localizer["Privacy</value>
   </data>
 </root>
