--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/_LoginPartial.nb.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/_LoginPartial.nb.resx
@@ -118,21 +118,21 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Manage Road User Account" xml:space="preserve">
-    <value>Gérer le compte d’utilisateur routier</value>
+    <value>Behandle tra-brukerkonto</value>
   </data>
   <data name="Logout" xml:space="preserve">
-    <value>Déconnexion</value>
+    <value>Logout</value>
   </data>
   <data name="Manage Toll Operator Account" xml:space="preserve">
-    <value>Gérer le compte de l’opérateur de péage</value>
+    <value>Behandle avgiftsoperatørkonto</value>
   </data>
   <data name="Manage Admin Account" xml:space="preserve">
-    <value>Gérer le compte administrateur</value>
+    <value>Behandle administratorkonto</value>
   </data>
   <data name="Register Road User" xml:space="preserve">
-    <value>Enregistrer les usagers de la route</value>
+    <value>Registrer trafikant</value>
   </data>
   <data name="Login" xml:space="preserve">
-    <value>Connectez-vous</value>
+    <value>Pålogging</value>
   </data>
 </root>
