--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Toll/Payment.ar.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Toll/Payment.ar.resx
@@ -117,4 +117,34 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Customer ID:" xml:space="preserve">
+    <value>رقم تعريف العميل:</value>
+  </data>
+  <data name="Fee:" xml:space="preserve">
+    <value>رسوم:</value>
+  </data>
+  <data name="Vehicle Reg Plate:" xml:space="preserve">
+    <value>لوحة تسجيل السيارة:</value>
+  </data>
+  <data name="Entry Timestamp:" xml:space="preserve">
+    <value>الطابع الزمني للدخول:</value>
+  </data>
+  <data name="Exit Timestamp:" xml:space="preserve">
+    <value>الخروج من الطابع الزمني:</value>
+  </data>
+  <data name="Invoice ID:" xml:space="preserve">
+    <value>معرف الفاتورة:</value>
+  </data>
+  <data name="Select card" xml:space="preserve">
+    <value>اختر البطاقة</value>
+  </data>
+  <data name="Choose your card" xml:space="preserve">
+    <value>اختر بطاقتك</value>
+  </data>
+  <data name="Enter your CVV" xml:space="preserve">
+    <value>أدخل CVV الخاص بك</value>
+  </data>
+  <data name="Add New Card" xml:space="preserve">
+    <value>إضافة بطاقة جديدة</value>
+  </data>
 </root>
