More support for translations

--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/Error.fi.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/Error.fi.resx
@@ -117,4 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Error" xml:space="preserve">
+    <value>Virhe</value>
+  </data>
+  <data name="An error occurred while processing your request" xml:space="preserve">
+    <value>Virhe käsiteltäessä pyyntöäsi</value>
+  </data>
+  <data name="Request ID" xml:space="preserve">
+    <value>Pyynnön tunnus</value>
+  </data>
 </root>
