--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/Error.fr.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/Error.fr.resx
@@ -117,4 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Error" xml:space="preserve">
+    <value>Erreur</value>
+  </data>
+  <data name="An error occurred while processing your request" xml:space="preserve">
+    <value>Une erreur s’est produite lors du traitement de votre demande</value>
+  </data>
+  <data name="Request ID" xml:space="preserve">
+    <value>ID de la demande</value>
+  </data>
 </root>
