--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/_Layout.nb.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Shared/_Layout.nb.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Nordic Tolling Service" xml:space="preserve">
+    <value>Nordisk bompengetjeneste</value>
+  </data>
   <data name="Nordic Department of Transport" xml:space="preserve">
     <value>Nordisk transportdepartement</value>
   </data>
