--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Toll/AddCard.da.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Toll/AddCard.da.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Use this page to add a new payment card." xml:space="preserve">
+    <value>Brug denne side til at tilføje et nyt betalingskort.</value>
+  </data>
   <data name="The last 3 digits on the back" xml:space="preserve">
     <value>De sidste 3 cifre på bagsiden</value>
   </data>
