--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Toll/TollHistoryRoadUser.da.resx
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Resources/Views/Toll/TollHistoryRoadUser.da.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Customer ID: {0}" xml:space="preserve">
+    <value>Kunde-id: {0}</value>
+  </data>
   <data name="Tolls History" xml:space="preserve">
     <value>Oversigt over vejafgifter</value>
   </data>
